Fix #116215: Sequencer crashes unlinking packed text

[0] caused a regression looking up fonts by filepath.

[0]: d770fd5ac48604f17e2d8a1b96e8c88147d95a84